feat: Implement wandb best practices for HPC clusters
- Configure environment variables (WANDB_API_KEY, WANDB_PROJECT, WANDB_ENTITY) in job scripts
- Default to offline mode for HPC runs to avoid internet dependency
- Add sync_wandb_offline.sh script for syncing offline runs later
- Update all config files to use offline mode by default
- Remove unused env.example file (project doesn't use .env loading)
- Add comprehensive wandb directory setup for HPC environments
- Include instructions for syncing offline runs after job completion

Tested: All shell scripts, wandb offline mode, config loading, and integration

--- a/configs/config_microscopy.yaml
+++ b/configs/config_microscopy.yaml
@@ -26,7 +26,7 @@ paths:
 wandb:
   project: pkl-diffusion-microscopy
   entity: anna_yoon-uc-berkeley  # Auto-configured from system credentials
-  mode: online  # online, offline, disabled
+  mode: offline  # Default to offline for HPC clusters
 
 # Model configuration - Optimized for 256x256 microscopy images
 model:
