--- a/configs/config_microscopy.yaml
+++ b/configs/config_microscopy.yaml
@@ -17,7 +17,7 @@ experiment:
 # Path configuration
 paths:
   root: ${oc.env:PROJECT_ROOT,.}
-  data: ${paths.root}/data
+  data: /global/scratch/users/anna_yoon/real_microscopy
   checkpoints: ${paths.root}/checkpoints
   outputs: ${paths.root}/outputs
   logs: ${paths.root}/logs
